# krita-ai-diffusion

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FORK.md  README.md  TODO.md  TurkishREADME.md  ai_diffusion.desktop  ai_tools.desktop  pyproject.toml  requirements.txt
.github/: FUNDING.yml  README.md
ai_diffusion/: __init__.py  ai_diffusion.action  api.py  attention_edit.py  client.py  cloud_client.py  comfy_client.py  comfy_workflow.py  comfyworkflow.py  connection.py  control.py  custom_workflow.py  diffusers_client.py  diffusers_connection.py  diffusers_server.py  document.py  dynamic_prompts.py  eventloop.py  extension.py  files.py  horde.py  image.py  jobs.py  layer.py  localization.py  model.py  network.py  persistence.py  platform_tools.py  pose.py  properties.py  region.py  resolution.py  resources.py  root.py  server.py  server_requirements.txt  settings.py  style.py  text.py  (+5 more)
ai_tools/: TODO.md  __init__.py  client.py  comfyworkflow.py  diffusion.py  document.py  extension.py  image.py  network.py  settings.py  util.py  widget.py  workflow.py
changelog-details/: 2026-03-20 - fix-nunchaku-flux-offload.md
doc/: cloud-gpu.md  comfy-requirements.md  common-issues.md  sd-versions.md
docs/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  regions.md
scripts/: benchmark_html.py  benchmark_report.py  design.py  diffusers_server.py  docker.py  download_models.py  file_server.py  images.py  package.py  server_requirements.in  translation.py
tests/: __init__.py  config.py  conftest.py  pytest.ini  test_api.py  test_attention_edit.py  test_autocomplete.py  test_client.py  test_comfy_workflow.py  test_connection.py  test_custom_workflow.py  test_document.py  test_dynamic_prompts.py  test_files.py  test_horde.py  test_image.py  test_image_transfer.py  test_layer.py  test_model.py  test_network.py  test_persistence.py  test_platform.py  test_pod.py  test_pose.py  (+10 more)
(+162 files in other folders)
